test/classicalForget4.slq

def main(){
	x := 0;
	forget(x);
	return x; // error
}
